assets/css/vhsoftware.css
/* General */

img.circle {
    border-radius: 50%;
}


/* Home Page */

div.homenav {
    height: 85%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: stretch;
    margin-right: 30px;
    font-size: 3vh;
    width: 200px;
}

div.homenav div {
    display: block;
    padding-top: 10px;
    padding-bottom: 10px;
    text-align: right;
}

div.homenav div a {
    color: black;
    text-decoration-line: none;
}

div.homenav div a:hover {
    text-decoration-line: underline;
}

div.home {
    width:100%;
    height: 70vh;
    display: flex;
    justify-content: center;
    align-items: center;
}

@media (max-width : 1000px) {
    div.home {
        width:100%;
        height: 70vh;
        display: flex;
        justify-content: center;
        align-items: center;
        flex-direction: column-reverse;
    }
    div.homenav div {
        display: block;
        padding-top: 10px;
        padding-bottom: 10px;
        text-align: left;
    }
}

div.card-adjust {
    display : flex;
    align-items : center;
    justify-content: center;
    flex-direction: column;
    height: 70px;
}

